--- a/src/html/index.html
+++ b/src/html/index.html
@@ -46,13 +46,13 @@
     <div>
       Examples of closed-source work
       <ul>
-        <li>Creation and maintenance of web sites managed by Umbraco CMS</li>
-        <li>Creation and maintenance of Web Api projects</li>
+        <li>Various Umbraco CMS managed web sites</li>
+        <li>Web Api projects</li>
         <li>
-          Creation and maintenance of bespoke database infrastructure to support the
+          An entirely bespoke database infrastructure to support the
           <a href="https://www.prospectsoft.com/">Prospect 365</a> platform
         </li>
-        <li>Creation and maintainance of bespoke .Net WinForms software</li>
+        <li>Bespoke .Net WinForms software</li>
         <li>SQL query writing and optimisation</li>
         <li>MS Office integration debugging apps</li>
         <li>Exchequer COM Toolkit usage debugging apps</li>
